--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ textarea{
   display: block;
   margin:auto;
 }
-input{
+input, select{
   text-align: center;
   width: 500px;
   margin: 10px auto;
