--- a/style.css
+++ b/style.css
@@ -28,3 +28,8 @@ a{
   text-decoration: none;
 }
 .form p{text-align: center;}
+#trigger-info{
+  position:absolute;
+  bottom:20px;
+  left:20px;
+}
